[workspace]
resolver = "2"
members = [
    "crates/storage",
    "crates/storage-ledger",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/inferadb/inferadb"

[workspace.dependencies]
# Async
async-trait = "0.1"
tokio = { version = "1.43", features = ["time", "sync", "rt"] }

# Data types
bytes = "1.9"
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# Concurrency
parking_lot = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime-serde = "1"

# Builder pattern
bon = "3.8"

# Logging
tracing = "0.1"

# Encoding
hex = "0.4"

# gRPC
tonic = "0.14"

# Error handling
thiserror = "1.0"

# Testing
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"
snafu = "0.8"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "deny"
unimplemented = "deny"
