[workspace]
resolver = "2"
members = [
    "crates/authn",
    "crates/storage",
    "crates/storage-ledger",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/inferadb/common"

[workspace.dependencies]
# Internal (uses latest from crates.io; consider using .cargo/config.toml override for local development)
inferadb-ledger-sdk = ">=0.1.0-0"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["time", "sync", "rt"] }

# Data types
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Concurrency
parking_lot = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime-serde = "1"

# Builder pattern
bon = "3"

# Logging
tracing = "0.1"

# Encoding
base64 = "0.22"
hex = "0.4"

# gRPC
tonic = "0.14"

# Error handling
thiserror = "2"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
zeroize = { version = "1.8", features = ["serde"] }

# JWT
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs", "ed25519-dalek", "use_pem"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Testing
rand = "0.9"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "deny"
unimplemented = "deny"
