[package]
name = "inferadb-common-authn"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared JWT authentication for InferaDB services"
readme = "README.md"
keywords = ["jwt", "authentication", "cache", "async"]
categories = ["authentication", "asynchronous"]

[lints]
workspace = true

[dependencies]
# Internal
inferadb-common-storage = ">=0.1.0-0"

# External
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
jsonwebtoken.workspace = true
moka.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { workspace = true, features = ["full", "test-util"] }
