[package]
name = "inferadb-common-authn"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared JWT authentication for InferaDB services"
readme = "README.md"
keywords = ["jwt", "authentication", "cache", "async"]
categories = ["authentication", "asynchronous"]

[features]
testutil = ["inferadb-common-storage/testutil", "dep:rand_core"]
failpoints = ["fail/failpoints", "inferadb-common-storage/failpoints"]

[lints]
workspace = true

[dependencies]
# Internal
inferadb-common-storage = { path = "../storage", version = ">=0.1.0-0" }

# External
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
fail.workspace = true
jsonwebtoken.workspace = true
moka.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
zeroize.workspace = true
rand_core = { version = "0.6", features = ["getrandom"], optional = true }

[dev-dependencies]
proptest.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }
rstest.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }

[[test]]
name = "failpoint_tests"
required-features = ["failpoints", "testutil"]
