[package]
name = "inferadb-storage-ledger"
version = "0.1.0"
edition = "2024"
description = "Ledger-backed implementation of StorageBackend for InferaDB"
license = "Apache-2.0"
repository = "https://github.com/inferadb/inferadb"
readme = "README.md"
keywords = ["storage", "ledger", "blockchain", "database"]
categories = ["database", "asynchronous"]

[dependencies]
# Shared storage abstraction
inferadb-storage = { path = "../inferadb-storage" }

# Ledger SDK
inferadb-ledger-sdk = { path = "../../../ledger/crates/sdk" }

# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Serialization (for config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime-serde = "1"

# Time
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# Bytes
bytes = "1"

# Encoding
hex = "0.4"

# gRPC (for tonic::Code in error mapping)
tonic = "0.14"

# snafu (for SDK error Location type)
snafu = "0.8"

# Builder pattern
bon = "3.8"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "real_ledger_integration"
path = "tests/real_ledger_integration.rs"
