[package]
name = "inferadb-storage"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/inferadb/inferadb"
description = "Shared storage backend abstraction for InferaDB services"
keywords = ["storage", "database", "key-value", "async"]
categories = ["database", "asynchronous"]
publish = false

[dependencies]
# Async runtime and traits
async-trait = "0.1"
tokio = { version = "1.41", features = ["time", "sync", "rt"] }

# Data types
bytes = "1.9"

# Error handling
thiserror = "2.0"

# Concurrency primitives for MemoryBackend
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.41", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"

[[bench]]
harness = false
name = "storage_backend"
