[package]
name = "inferadb-common-storage-ledger"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ledger-backed implementation of StorageBackend for InferaDB"
readme = "README.md"
keywords = ["storage", "ledger", "blockchain", "database"]
categories = ["database", "asynchronous"]

[lints]
workspace = true

[dependencies]
inferadb-common-storage = ">=0.1.0-0"
inferadb-ledger-sdk.workspace = true

async-trait.workspace = true
bon.workspace = true
bytes.workspace = true
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
snafu = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "real_ledger_integration"
path = "tests/real_ledger_integration.rs"
