[package]
name = "inferadb-common-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared storage backend abstraction for InferaDB services"
keywords = ["storage", "database", "key-value", "async"]
categories = ["database", "asynchronous"]

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bon.workspace = true
bytes.workspace = true
chrono.workspace = true
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
