[package]
name = "inferadb-common-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared storage backend abstraction for InferaDB services"
keywords = ["storage", "database", "key-value", "async"]
categories = ["database", "asynchronous"]

[features]
testutil = []
failpoints = ["fail/failpoints"]

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
inferadb-ledger-types.workspace = true
bon.workspace = true
bytes.workspace = true
chrono.workspace = true
fail.workspace = true
moka.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }
proptest.workspace = true
rand.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber.workspace = true

[[test]]
name = "conformance"
required-features = ["testutil"]

[[test]]
name = "range_edge_cases"
required-features = ["testutil"]

[[test]]
name = "failpoint_tests"
required-features = ["failpoints"]

[[bench]]
name = "storage_benchmarks"
harness = false
