[package]
name = "inferadb-common-authn-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
base64 = "0.22"
serde_json = "1"

[dependencies.inferadb-common-authn]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_jwt_parsing"
path = "fuzz_targets/fuzz_jwt_parsing.rs"
doc = false

[[bin]]
name = "fuzz_jwt_claims"
path = "fuzz_targets/fuzz_jwt_claims.rs"
doc = false
